<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/enter_pin"
        android:gravity="center"
        android:textSize="36dp"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/first_circle"
            android:background="@drawable/empty_circle"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/second_circle"
            android:background="@drawable/empty_circle"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/third_circle"
            android:background="@drawable/empty_circle"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fourth_circle"
            android:background="@drawable/empty_circle"/>
    </LinearLayout>

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_gravity="center"
        android:columnCount="3"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/btn_1"
            android:text="@string/btn_1"/>
        <Button
            android:id="@+id/btn_2"
            android:text="@string/btn_2"/>
        <Button
            android:id="@+id/btn_3"
            android:text="@string/btn_3"/>
        <Button
            android:id="@+id/btn_4"
            android:text="@string/btn_4"/>
        <Button
            android:id="@+id/btn_5"
            android:text="@string/btn_5"/>
        <Button
            android:id="@+id/btn_6"
            android:text="@string/btn_6"/>
        <Button
            android:id="@+id/btn_7"
            android:text="@string/btn_7"/>
        <Button
            android:id="@+id/btn_8"
            android:text="@string/btn_8"/>
        <Button
            android:id="@+id/btn_9"
            android:text="@string/btn_9"/>
        <Button
            android:layout_column="1"
            android:id="@+id/btn_0"
            android:text="@string/btn_0"/>
        <Button
            android:id="@+id/btn_del"
            android:text="@string/btn_del"/>
    </GridLayout>

</LinearLayout>