<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minHeight="800dp"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_weight="1"
        android:hint="@string/title"
        android:id="@+id/title"
        android:inputType="text"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_weight="3"
        android:hint="@string/note"
        android:id="@+id/note"
        android:inputType="textMultiLine"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"/>
    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/has_deadline"
        android:checked="true"
        android:id="@+id/deadline_checkbox"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:id="@+id/deadline_date"
            android:inputType="date"
            />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/deadline_btn"
            app:srcCompat="@drawable/ic_insert_invitation_black_24dp"/>
    </LinearLayout>




</LinearLayout>